--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RubyProject1</title>
+    <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <meta name="keywords" content="<%= @seo_keywords %>" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,6 +15,13 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <div>
+      <div> <%= link_to "Home", root_path %> </div>
+      <div> <%= link_to "About", about_me_path %> </div>
+      <div> <%= link_to "Contact", contact_path %> </div>
+      <div> <%= link_to "Blog", blogs_path %> </div>
+      <div> <%= link_to "Portfolio", portfolios_path %> </div>
+    </div>
    
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
@@ -21,7 +30,9 @@
        <%= link_to "Register", new_user_registration_path %>
     <% end %>
 
-    <%= yield %>
+    <!-- yield allows us to slide the content in to page -->
+    <%= yield %> 
+
     <% if session[:source] %>
     <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
