--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -24,14 +24,8 @@
 
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
-
-    <div>
-      <div> <%= link_to "Home", root_path %> </div>
-      <div> <%= link_to "About", about_me_path %> </div>
-      <div> <%= link_to "Contact", contact_path %> </div>
-      <div> <%= link_to "Blog", blogs_path %> </div>
-      <div> <%= link_to "Portfolio", portfolios_path %> </div>
-    </div>
+    
+    <%= render 'shared/nav' %>
 
     <% if session[:source] %>
     <p>Thanks for visiting me from <%= session[:source] %></p>
