--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,32 +1,3 @@
 <h1>Edit this Portfolio item</h1>
 
-<%= form_with(model: @portfolio_item, local: true) do |p| %>
-
-  <div class="field">
-    <%= p.label :title %>
-    <%= p.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= p.label :subtitle %>
-    <%= p.text_field :subtitle %>
-  </div>
-  
-  <div class="field">
-    <%= p.label :body %>
-    <%= p.text_area :body %>
-  </div>
-
-    <ul>
-    <%= p.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-  
-  <div class="actions">
-    <%= p.submit %>
-  </div>
-<% end %>
+<%= render "form", portfolio_item: @portfolio_item %>
