Implemented view helper for auth links

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -14,15 +14,10 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-   
-    <% if current_user.is_a?(User) %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-       <%= link_to "Login", new_user_session_path %>
-       <%= link_to "Register", new_user_registration_path %>
-    <% end %>
 
-      <%= render 'shared/nav', location: "top" %>
+    <%= render 'shared/nav', location: "top" %>
+
+    <%= login_helper %>
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
 
