Implemented the content tag helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
 
-    <% if session[:source] %>
-    <p>Thanks for visiting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper %>
+    
   </body>
 </html>
