--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,10 +1,13 @@
-<tr>
+<% @blogs.each do |blog| %>
+ <tr>	
 	<td><%= blog.title %></td>
+	<td> Published <%= distance_of_time_in_words( blog.created_at, Time.now) %> ago</td>
 	<td><%= blog.body %></td>
-	 <td><%= link_to blog.status, toggle_status_blog_path(blog.id) %></td>
+    <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
 	<td><%= link_to 'Show', blog %></td>
 	<td><%= link_to 'Edit', edit_blog_path(blog) %></td>
 	<td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-</tr>
+ </tr>
+ <% end %>
 <!-- rails handles the iteration, by passing in @blogs and naming this partial the singluar of blogs which is blog
 rails looks for the blog partial and since the iteration cycle is so common with the @blogs instance variable defined in the controller, rails does the iteration automatically for us -->
