--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
+    <!-- <p class="notice"><%= notice %></p> causes two notices because of notice in controller -->
     <p class="alert"><%= alert %></p>
    
     <%= login_helper %>
