--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,5 +2,5 @@
 
 <%= link_to "Create New Item", new_portfolio_path %>
 
-<%= render partial: 'portfolio_item', collection: @portfolio_items %>
-<%#= render "portfolio_item", portfolio_items: @portfolio_items %>
+<%#= render partial: 'portfolio_item', collection: @portfolio_items %>
+<%= render "portfolio_item", portfolio_items: @portfolio_items %>
