Integrated new gem into rails app for copyright

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
 
+    <%= copyright_generator %>
     <%= source_helper %>
     
   </body>
