--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -5,8 +5,8 @@
 	<td><%= blog.body %></td>
     <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
 	<td><%= link_to 'Show', blog %></td>
-	<td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-	<td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
+	<td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
  </tr>
  <% end %>
 <!-- rails handles the iteration, by passing in @blogs and naming this partial the singluar of blogs which is blog
