Updated master layout styles along with helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,13 @@
     <body>
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-            <%= render "shared/application_nav", location: "top" %>
-
-            <%= login_helper %>
+            <%= render "shared/application_nav"%>
 
             <!-- yield allows us to slide the content in to page -->
             <%= yield %> 
 
-            <%= copyright_generator %>
+            <%= render "shared/application_footer"%>
+
             <%= source_helper %>
         </div>
     </body>
