--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,23 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5556667777" %></p>
+<h1>Lets work together!</h1>
+
+<hr>
+
+<div class="row">
+	<div class="col-md-6">
+	    <h3>Home Address</h3>
+
+	    <p>Milton ma, 02186</p>
+
+	    <h3>Phone</h3>
+
+		<p><%= number_to_phone "8573333429" %></p>
+
+		<h3>Email</h3>
+
+		<p><a href="mailto:samueldorilas@outlook.com?subject=PortfolioContact" "email me">Email me</a></p>
+	</div>
+
+	<div class="col-md-6">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94522.90181144398!2d-71.15136104931184!3d42.239216539786185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37dcc5d01064b%3A0x6b4bf10013fdfcb5!2sMilton%2C+MA!5e0!3m2!1sen!2sus!4v1533403994296" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
+</div>
