--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -17,7 +17,7 @@
 
     <%= render 'shared/nav', location: "top" %>
 
-    <%= login_helper %>
+    <%= login_helper("nav-link")  %>
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
 
