--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style = "min-height: 120%;">
   <div class="card-body">
     <div class="row">
       <div class="col-md-8">
