Finished initial styling of devise pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,3 +126,12 @@ body {
 .auth-links a {
   color: black;
 }
+
+.edit-devise {
+  min-height: 120%
+}
+
+.login {
+  width: 25rem;
+  margin: 0 auto; /* aligns card to the center */
+}
