Fixed bug with login helper method by setting defaults

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,10 +17,14 @@
    
     <%= login_helper %>
 
+    <%= render "shared/application_nav"%>
+
     <!-- yield allows us to slide the content in to page -->
     <%= yield %> 
 
-    <%= render "shared/nav", location: "bottom" %>
+    <%#= render "shared/nav", location: "bottom" %>
+    
+    <%= render "shared/application_footer"%>
 
   <%= source_helper %>
   </body>
