--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About me</h1>
+<p>I have been programming for a few years. I have a bachelors degree in Software developement. I have certifications through Comptia, Oracle, and CIW. My highest certification is the Oracle certified Java professional programmer. I have written projects in Java, javascript, ruby, python, and C#. I have also created android applications in java. I have utilized html, css, and xml on a constant. My language of preference is java, since I have had the most experience with it, however I am very happy to work with any language. Even through all my experience I am still learning I hope to be the best programmer that I can be.</p>
+<br>
+<p>Having coded in multiple languages, I have come to find that the success of a project is dependent on multiple
+factors. To achieve our goals as efficiently as possible, it is important that we work on ourselves as a team and as individuals on a constant basis. It is true that we should always set end goals, but the ultimate end goal should in fact be a never ending one. The goal to be the best that we can be in every way by using every accomplishment as a stepping stone to reach even greater heights than anyone else, including ourselves.</p>
