--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1 class="cover-heading">Welcome.</h1>
+    <p class="lead"> 
+    	<h3>"A clever person solves a problem.<h2>
+        <h3>A wise person AVOIDS it."<h2>
+        <h5>- Albert Einstein<h5>
+    </p>
     <p class="lead">
       <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
     </p>
