Implemented nav bar for blog layout

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,14 +16,12 @@
   </head>
 
   <body>
-
-    <%= login_helper %>
     
     <main role="main" class="container">
       
       <div class="row">
 
-        <%= render "shared/nav"%>
+        <%= render "shared/blog_nav"%>
 
         <!-- yield allows us to slide the content in to page -->
         <%= yield %> 
