--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,5 @@
-      
+ <%= render "shared/blog_featured", blogs: @blogs %>
+
 <div class="col-md-8 blog-main">
   <h3 class="pb-3 mb-4 font-italic">
     <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin)%>
@@ -12,5 +13,7 @@
   </nav>
 
 </div><!-- /.blog-main -->
+
+
 
 
