--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -128,7 +128,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-.card-text2 {
+.featured-text {
     word-wrap: break-word;
     width: 1075px;
     white-space: nowrap;
