--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -12,8 +12,8 @@
 		
 		<!-- <p class = "blog-body"><%= blog.body[0,290] + "..." %></p> -->
 
-		<% if blog.body.length > 295 %>
-			<p class = "blog-body"><%= blog.body[0,295] + "..." %></p>
+		<% if blog.body.length > 445 %>
+			<p class = "blog-body"><%= blog.body[0,445] + "...." %></p>
 		<% else %>
 			<p class = "blog-body"><%= blog.body %></p>
 		<% end %>
