--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,14 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8 blog-main">
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
+  <h2 class="pb-3 mb-4 font-italic"><%= @blog.title %></h2>
 
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
+  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
+  <%= link_to 'Back', blogs_path %>
 
-<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
-<%= link_to 'Back', blogs_path %>
+  <p><%= @blog.body %></p>
+  
+</div>
+
+
+
+
+
+
+
