--- a/app/views/shared/_blog_featured.html.erb
+++ b/app/views/shared/_blog_featured.html.erb
@@ -1,20 +1,20 @@
-
+ 
     <div class="col-md-12">
       <div class="card flex-md-row mb-4 shadow-sm">
         <div class="card-body d-flex flex-column align-items-start">
             <div >
-              <h3>Featured post</h3>
-              <div><%= blogs.last.title %></div>
+              <h3 class= "featured-post">Featured post</h3>
+              <div class= "blog-title"><%= @featured_blogs.last.title %></div>
               <div class="mb-1 text-muted">
-                <%= distance_of_time_in_words( blogs.last.created_at, Time.now) %> ago
+                <%= distance_of_time_in_words( @featured_blogs.last.created_at, Time.now) %> ago
               </div>
-              <% if blogs.last.body.length > 295 %>
-                <p class = "blog-body"><%= blogs.last.body[0,295] + "...." %></p>
+              <% if @featured_blogs.last.body.length > 320 %>
+                <p class = "featured-body"><%= @featured_blogs.last.body[0,320] + "...." %></p>
               <% else %>
-                <p class = "blog-body"><%= blogs.last.body %></p>
+                <p class = "featured-body"><%= @featured_blogs.last.body %></p>
               <% end %>
-              <p><%= link_to "Continue reading", blogs.last%></p>
+              <p><%= link_to "Continue reading", @featured_blogs.last%></p>
             </div>
         </div> 
       </div>
-    </div>
+    </div> 
