--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,9 +1,23 @@
-<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 <% @portfolio_items.each do |portfolio_item| %>
-<p> <%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%> </p>
-<p> <%= portfolio_item.subtitle%> </p>
-<p> <%= portfolio_item.body%> </p>
-<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil?%>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item.id), method: :delete , data: {confirm: "Are you sure?"} if logged_in?(:site_admin) %>
+	<div class="col-md-4">
+		<div class="card mb-4 shadow-sm">
+			<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil?%>
+			<div class="card-body">
+				<p class="card-text">
+					<span><%=  portfolio_item.title %></span>
+					<%= portfolio_item.subtitle%>
+				</p>
+				<div>
+					<div>
+					 	<button type="button" class="btn btn-sm btn-outline-secondary">
+					 		<%= link_to "View", portfolio_show_path(portfolio_item.id) %> 
+					 	</button>
+					 	<button type="button" class="btn btn-sm btn-outline-secondary">
+					 		<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
+					 	</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
 <% end %>
