--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -12,9 +12,11 @@
 					 	<button type="button" class="btn btn-sm btn-outline-secondary">
 					 		<%= link_to "View", portfolio_show_path(portfolio_item.id) %> 
 					 	</button>
-					 	<button type="button" class="btn btn-sm btn-outline-secondary">
-					 		<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-					 	</button>
+					 	<% if logged_in?(:site_admin) %>
+						 	<button type="button" class="btn btn-sm btn-outline-secondary">
+						 		<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+						 	</button>
+					 	<% end %>
 					</div>
 				</div>
 			</div>
