--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="text-muted">
   <div class="container">
-    <p><a href="#">Back to top</a></p>
+    <%= link_to 'Back to portfolios', portfolios_path %> / <a href="#">Back to top</a>
     <p><%= copyright_generator %></p>
   </div>
 </footer>
