--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,29 +1,37 @@
 <%= form_with(model: @portfolio_item, local: true) do |p| %>
 
-  <div class="field">
-    <%= p.label :title %>
-    <%= p.text_field :title %>
+  <div class = "row">
+    <div class= "col-md-6">
+      <div class="form-group">
+        <%= p.label :title %>
+        <%= p.text_field :title, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= p.label :subtitle %>
+        <%= p.text_field :subtitle, class: "form-control" %>
+      </div>
+    </div>
+    <div class= "col-md-6">
+      <div class="form-group">
+        <%= p.label :body %>
+        <%= p.text_area :body, class: "form-control", rows: 13 %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= p.label :subtitle %>
-    <%= p.text_field :subtitle %>
-  </div>
-  
-  <div class="field">
-    <%= p.label :body %>
-    <%= p.text_area :body %>
-  </div>
-
-  <ul>
-    <%= p.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-  <div class="actions">
-    <%= p.submit %>
+  <div class= "col-md-12">
+    <h2>Technologies Used:</h2>
+    <div>
+      <%= p.fields_for :technologies do |technology_form| %>
+      <div class="form-group">
+        <%= technology_form.label :name %>
+        <%= technology_form.text_field :name, class: "form-control" %>
+      </div>
+      <% end %>
+    </div>
+    <div class="form-group">
+      <%= p.submit "Save Portfolio Item", class: 'btn btn-primary' %>
+    </div>
   </div>
 <% end %>
