--- a/app/views/shared/_application_nav.erb
+++ b/app/views/shared/_application_nav.erb
@@ -3,11 +3,7 @@
     <div class="inner">
       <h3 class="masthead-brand">Samuel Dorilas</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <%= link_to "Home", root_path, class: "nav-link" %>
-        <%= link_to "About Me", about_me_path, class: "nav-link" %>
-        <%= link_to "Contact", contact_path, class: "nav-link" %>
-        <%= link_to "Blog", blogs_path, class: "nav-link" %>
-        <%= link_to "Portfolio", portfolios_path, class: "nav-link" %>
+        <%= nav_helper("nav-link") %>
         <%= login_helper("nav-link") %>
       </nav>
     </div>
