--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,12 +1,10 @@
-<div class="container">
+ <div class="container">
     <div class="nav-scroller py-1 mb-2">
-        <nav class="nav d-flex justify-content-between">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-	        <%= link_to "About Me", about_me_path, class: "nav-link" %>
-	        <%= link_to "Contact", contact_path, class: "nav-link" %>
-	        <%= link_to "Blog", blogs_path, class: "nav-link" %>
-	        <%= link_to "Portfolio", portfolios_path, class: "nav-link" %>
+        <nav class="nav d-flex justify-content-between ">
+            <%= nav_helper("nav-link") %>
 	        <%= login_helper("nav-link") %>
         </nav>
     </div>
-</div>
+</div>   
+<!-- nav-background -->
+
