--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,6 +1,6 @@
 <% @portfolio_items.each do |portfolio_item| %>
 	<div class="col-md-4">
-		<div class="card mb-4 shadow-sm">
+		<div class="card mb-4 shadow-sm" data-id= "<%= portfolio_item.id %>">
 			<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil?%>
 			<div class="card-body">
 				<p class="card-text">
