Integrated image background for app layout

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
 		<br><br>
 		<%= image_tag "profile.png", height: 450, alt: "Portfolio image" %>
 	</div>
-	<div class="col-md-8">
+	<div class="col-md-8" style="color: white;">
 		<h1>About me</h1>
 		<p>I have been programming for a few years. I have a bachelors degree in Software developement. I have certifications through Comptia, Oracle, and CIW. My highest certification is the Oracle certified Java professional programmer. I have written projects in Java, javascript, ruby, python, and C#. I have also created android applications in java. I have utilized html, css, and xml on a constant. My language of preference is java, since I have had the most experience with it, however I am very happy to work with any language. Even through all my experience I am still learning I hope to be the best programmer that I can be.</p>
 		<br>
