--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Welcome.</h1>
+    <h1 class="cover-heading">Welcome!</h1>
     <p class="lead"> 
     	<h3>"A clever person solves a problem.<h2>
         <h3>A wise person AVOIDS it."<h2>
