Integrated video background along with styles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= video_helper('binary.mp4', "backgroundb.png") %>
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Welcome!</h1>
     <p class="lead"> 
