added carrier wave, aws, mini magick, and dotenv gems

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -47,8 +47,8 @@ footer p {
  color: white;
  }
 
-.portfolio-form {
-  padding: 20px;
+portfolio-container{
+  padding-top: 30px;
 }
 
 .form-group{
