--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -11,6 +11,15 @@
         <%= p.label :subtitle %>
         <%= p.text_field :subtitle, class: "form-control" %>
       </div>
+
+      <div class="form-group">
+        <%= p.file_field :main_image %>
+      </div>
+
+      <div class="form-group">
+        <%= p.file_field :thumb_image %>
+      </div>
+
     </div>
     <div class= "col-md-6">
       <div class="form-group">
