--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -13,13 +13,18 @@
       </div>
 
       <div class="form-group">
-        <%= p.file_field :main_image %>
+        <label class = "btn btn-primary">
+          <%= p.file_field :main_image, style: "diplay: none;" %>
+        </label>
+       
       </div>
 
       <div class="form-group">
-        <%= p.file_field :thumb_image %>
+        <label class = "btn btn-primary">
+          <%= p.file_field :thumb_image, style: "diplay:none;" %>
+        </label>
+        
       </div>
-
     </div>
     <div class= "col-md-6">
       <div class="form-group">
