--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,5 +1,4 @@
 
-
 <%= form_with(model: blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
@@ -14,13 +13,13 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
+    <%#= form.label :title %>
+    <%= form.text_field :title, class: "form-control", placeholder: "Title" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, class: "form-control", rows: 15 %>
+    <%#= form.label :body %>
+    <%= form.text_area :body, class: "form-control", rows: 15, placeholder: "Content" %>
   </div>
 
   <div class="form-group">
