--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,6 +22,9 @@
         <%= render "shared/blog_sidebar"%>
       </div>
         <%= render "shared/blog_footer"%>
+
+        <%= alerts %>
+        
         <%= source_helper %>
     </main> 
   </body>
