Implemented jquery functions for action cable comment feature

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,9 +8,10 @@
   <p><%= @blog.body %></p>
 
   <%= render "comment/comment_form" %>
-
-  <%#= render @blog.comments %>
-  <%= render "comments/comment", comments: @blog.comments %>
+  <div id = "comments" data-blog-id="<%= @blog.id %>">
+	  <%#= render @blog.comments %>
+	  <%= render "comments/comment", comments: @blog.comments %>
+  </div>
   
 </div>
 
