--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -5,6 +5,6 @@
 			<%= f.text_area :content, class: "form-control" %>
 		</div>
 
-		<% f.submit 'Post Comment', class: "btn btn-primary" %>
+		<%= f.submit 'Post Comment', class: "btn btn-primary" %>
 	<% end %>
 <% end %>
