Fixed bugs, unclosed method, typo in javascript cofee, typo of coffee name, modified show render comments to work with broadcast render comments for automatic update of comments through action cable, Finished implementing action cable for comments

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,8 +9,9 @@
 
   <%= render "comments/comment_form" %>
   <div id = "comments" data-blog-id="<%= @blog.id %>">
-	  <%#= render @blog.comments %>
-	  <%= render "comments/comment", comments: @blog.comments %>
+	  <!-- <%#= render @blog.comments %>  I prefer the method below because it speaks more but this works if you
+	  	modify the comment_broadcast_job by passing in just comment without the comments array-->
+	  <%= render "comments/comment" , comments: @blog.comments%>
   </div>
   
 </div>
