--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user.is_a? GuestUser %>
-	<%= form_for @comment, url: '#' do |f| %>
+	<%= form_for @comment, url: "#" do |f| %>
 		<div class="form-group">
 			<%= f.label :content %>
 			<%= f.text_area :content, class: "form-control" %>
@@ -8,3 +8,4 @@
 		<%= f.submit 'Post Comment', class: "btn btn-primary" %>
 	<% end %>
 <% end %>
+
