--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
 
-    <body>
+    <body style= "background-color: black">
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
             
 
