Images added to assets, created two more pages certification and more about me

--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,7 @@
-<footer class="mastfoot mt-auto">
-    <div class="inner app-footer">
-      <p><%= copyright_generator %></p>
+
+<footer class="mastfoot mt-auto" style = "text-align: center;">
+    <div class="inner app-footer" style = "text-align: center;">
+      <p style = "text-align: center;"><%= copyright_generator %></p>
     </div>
 </footer>
+
