--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,13 +147,45 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('back8.png') no-repeat;
   background-size: cover;
+}
+
+.background-about{
+  background: image-url('back8.png') no-repeat; 
+}
+.background-more{
+  background: image-url('weights.jpg') no-repeat; 
+}
+
+.background-certifications{
+  background: image-url('pl.jpg') no-repeat;
 }
 
 .app-footer{
   color: white;
 }
 
+.button{
+  background-color: black;
+}
 
+.image {
+    transform: rotate(90deg);
+}
 
+.backdrop{
+    border-style: solid;
+    border-width: 5px;
+    background-color: black;
+}
+
+.nav-link-more {
+
+  color: black;
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+.color-one{
+  color: black;
+}
