--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
-<div id="background"></div> 
-<div class = "row"?>
+<div class="background-about" id="background"></div> 
+<div class = "row">
 	<div class = "col-md-4">
 		<br><br>
 		<%= image_tag "profile.png", height: 450, alt: "Portfolio image" %>
@@ -10,6 +10,18 @@
 		<br>
 		<p>Having coded in multiple languages, I have come to find that the success of a project is dependent on multiple
 		factors. To achieve our goals as efficiently as possible, it is important that we work on ourselves as a team and as individuals on a constant basis. It is true that we should always set end goals, but the ultimate end goal should in fact be a never ending one. The goal to be the best that we can be in every way by using every accomplishment as a stepping stone to reach even greater heights than anyone else, including ourselves.</p>
+
+
 	</div>
+	<div class = "row">
+		<div class = "col-md-7">
+			<button class = "button"><%= link_to "More About Me", more_about_me_path %></button>
+		</div>
+		<div class = "col-md-5">
+			<button class = "button"><%= link_to "Certifications", certifications_path %></button>
+		</div>
+    </div>
+	
+	<%#= " <a href='#{contact_path}'>Contact</a> ".html_safe %>
 </div>
 
