--- a/app/views/shared/_blog_featured.html.erb
+++ b/app/views/shared/_blog_featured.html.erb
@@ -4,16 +4,20 @@
         <div class="card-body d-flex flex-column align-items-start">
             <div >
               <h3 class= "featured-post">Featured post</h3>
-              <div class= "blog-title"><%= @featured_blogs.last.title %></div>
-              <div class="mb-1 text-muted">
-                <%= distance_of_time_in_words( @featured_blogs.last.created_at, Time.now) %> ago
-              </div>
-              <% if @featured_blogs.last.body.length > 320 %>
-                <p class = "featured-body"><%= @featured_blogs.last.body[0,320] + "...." %></p>
-              <% else %>
-                <p class = "featured-body"><%= @featured_blogs.last.body %></p>
-              <% end %>
-              <p><%= link_to "Continue reading", @featured_blogs.last%></p>
+              <% @featured_blogs.each do |featured_blog| %>
+                <% if featured_blog.featured? %>
+                  <div class= "blog-title"><%= featured_blog.title %></div>
+                  <div class="mb-1 text-muted">
+                    <%= distance_of_time_in_words( featured_blog.created_at, Time.now) %> ago
+                  </div>
+                  <% if featured_blog.body.length > 320 %>
+                    <p class = "featured-body"><%= featured_blog.body[0,320] + "...." %></p>
+                  <% else %>
+                    <p class = "featured-body"><%= featured_blog.body %></p>
+                  <% end %>
+                  <p><%= link_to "Continue reading", featured_blog%></p>
+                <% end %>
+               <% end %>
             </div>
         </div> 
       </div>
