--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -11,7 +11,7 @@
   <div id = "comments" data-blog-id="<%= @blog.id %>">
 	  <!-- <%#= render @blog.comments %>  I prefer the method below because it speaks more but this works if you
 	  	modify the comment_broadcast_job by passing in just comment without the comments array-->
-	  <%= render "comments/comment" , comments: @blog.comments%>
+	  <%= render "comments/comment" , comments: @blog.comments, blog: @blog%>
   </div>
   
 </div>
