--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,7 @@
 <div class="col-md-8 blog-main">
 
   <h2 class="pb-3 mb-4 font-italic"><%= @blog.title %></h2>
+  <p><%= @blog.topic.title %></p>
 
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
   <%= link_to 'Back', blogs_path %>
