--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -209,3 +209,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   color: grey;
 }
+
+.form-control-topic{
+  width: 350px;
+  text-align: center;
+}
