--- a/app/views/shared/_blog_head.html.erb
+++ b/app/views/shared/_blog_head.html.erb
@@ -1,9 +1,11 @@
-<div class="container" >
-	<header class="blog-header py-3">
-		<div class="row flex-nowrap justify-content-between align-items-center">
-			<div class="col-12 text-center">
-				<a class="blog-header-logo text-dark">My Blogs</a>
+<% unless this_page(edit_topic_path) || this_page(topics_path) %>
+	<div class="container" >
+		<header class="blog-header py-3">
+			<div class="row flex-nowrap justify-content-between align-items-center">
+				<div class="col-12 text-center">
+					<a class="blog-header-logo text-dark">My Blogs</a>
+				</div>
 			</div>
-		</div>
-	</header>
-</div>
+		</header>
+	</div>
+<% end %>
