--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.text_field :title, class: "form-control",placeholder: "Title" %>
+    <%= form.text_field :title, class: "form-control-topic", value: 'Edit Title' %>
   </div>
 
   <div class="form-group row">
