--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,15 +1,9 @@
-<div class = "container">
-	<hr>
-	<h2> Create a new Topic</h2>
-	<%= render "form", topic: @topic %>
-	<hr>
-	<br>
-	<h2>Manage Topics</h2>
-	<div class = "row">
-		<% @topics.each do |topic| %>
-			<div class= "col-md-6">
-				<%= render "form", topic: topic %>
-			</div>
-		<% end %>
-	</div>
+<div class="col-md-8 blog-main">
+    <h1>Topics
+    <% if logged_in?(:site_admin) %>
+	/ <%= link_to "Edit Topics", edit_topic_path %>
+	<% end %>
+    </h1>
+    <hr>
+    <%= render "topic" %>
 </div>
