--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,18 +1,26 @@
-<% unless logged_in?(:site_admin) %>
+<%# unless logged_in?(:site_admin) %>
+<% unless current_page? edit_topic_path %>
 
   <aside class="col-md-4 blog-sidebar">
     <div class="p-3 mb-3 bg-light rounded">
       <h4 class="font-italic">About</h4>
       <p class="mb-0" style="font-style: italic;">The world of computer science is quite vast. I am open to talking about any topic of interest.</p>
     </div>
-
+ 
+    <div class="p-3">
+      <h3 class="font-italic" style = "text-decoration: underline;"><%= link_to "Topics", topics_path%></h3>
+      <% @side_bar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %></p>
+      <% end %>
+    </div>
+ 
     <div class="p-3">
       <h4 class="font-italic">Elsewhere</h4>
       <ol class="list-unstyled social-links">
         <li><a href="https://github.com/watchdogoblivion"><%= fa_icon "github" %></a></li>
-  <!--       <li><a href="#"><%= fa_icon "twitter" %></a></li>
-        <li><a href="#"><%= fa_icon "facebook-square" %></a></li> -->
         <li><a href="https://www.instagram.com/samuel.j.d/?hl=en"><%= fa_icon "instagram" %></a></li>
+  <!--  <li><a href="#"><%= fa_icon "twitter" %></a></li>
+        <li><a href="#"><%= fa_icon "facebook-square" %></a></li> -->
       </ol>
     </div>
   </aside>
