--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -4,8 +4,7 @@
 		<p class="blog-post-meta">Published <%= blog.created_at.strftime("%F") %></p>
 		<% if logged_in?(:site_admin)%>
 			<p class="blog-post-meta">
-				<%= link_to blog.status, toggle_status_blog_path(blog)%> /
-				<%= link_to blog.featured, toggle_featured_blog_path(blog)%> /
+				<%= blog.status%> /
 				<%= link_to 'Edit', edit_blog_path(blog)%> /
 				<%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }%>		
 			</p>
