Implemented markdown for blogs posts

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,7 +7,7 @@
   <%= link_to 'Go to blogs', blogs_path %> |
   <%= link_to 'Go to Topics', topics_path %>
 
-  <p><%= @blog.body %></p>
+  <p><%= markdown @blog.body %></p>
 
   <%= render "comments/comment_form" %>
   <div id = "comments" data-blog-id="<%= @blog.id %>">
