--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -3,6 +3,6 @@
 
 	<%= render 'form', blog: @blog %>
 
-	<%= link_to 'Show', @blog %> |
-	<%= link_to 'Back', blogs_path %>
+	<%= link_to 'Show Blog', @blog %> |
+	<%= link_to 'Go to Blogs', blogs_path %>
 </div>
