Implemented helper for admin actions

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -214,3 +214,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 350px;
   text-align: center;
 }
+
+.blogicons {
+  font-size: .55em;
+  margin: 0px 10px 0px 10px;
+}
+
+.blogcrumb {
+  margin: 0px 10px 0px 10px;
+}
