--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,10 +1,10 @@
 <% @blogs.each do |blog| %>
 	<div class="blog-post">
-		<h2 class="blog-post-title"><%= link_to blog.title, blog %></h2>
+		<p class="blog-post-title"><%= link_to blog.title, blog %>
+			<%= icons_helper(blog, "blogicons") %>
+		</p2>
 		<p class="blog-post-meta">Created <%= blog.created_at.strftime("%F") %></p>
-		<p class="blog-post-meta"></p>
-		<p class = "blog-body"><%= markdown line_limiter(blog.body, 11) %></p>
-		
+		<p class = "blog-body"><%= markdown line_limiter(blog.body, 11) %></p>	
 	</div>
 <% end %>
 
