--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -6,12 +6,10 @@
       <%= link_to @blog.topic.title, topic_path(@blog.topic.id), class:"breadcrumb-item" %>
       <%= link_to 'Blogs', blogs_path, class:"breadcrumb-item" %>
       <span class="ml-auto">
-        <%= link_to fa_icon("pencil-square-o"), edit_blog_path(@blog) if logged_in?(:site_admin) %>
-        <%= link_to fa_icon("trash"), @blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+        <%= icons_helper(@blog, "blogcrumb")%>
       </span>
   </nav>
   
-<%#= link_to 'Edit Blog', edit_blog_path(@blog) , class:"breadcrumb-item"  %>
   <p><%= markdown @blog.body %></p>
 
   <%= render "comments/comment_form" %>
