Updated source tracking feature

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,4 +1,3 @@
-<%# unless logged_in?(:site_admin) %>
 <% unless current_page? edit_topic_path %>
 
   <aside class="col-md-4 blog-sidebar">
@@ -6,6 +5,8 @@
       <h4 class="font-italic">About</h4>
       <p class="mb-0" style="font-style: italic;">The world of computer science is quite vast. I am open to talking about any topic of interest.</p>
     </div>
+
+    <%= source_helper "alert alert-info blog-sidebar-source" %>
  
     <div class="p-3">
       <h3 class="font-italic" style = "text-decoration: underline;"><%= link_to "Topics", topics_path%></h3>
