--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 <div class="album py-5 bg-light">
 	<div class="container">
+		  <%= source_helper("alert alert-warning") %>
 
 		<div class="row <%= "sortable" if logged_in?(:site_admin) %>">
 
