--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,7 +191,7 @@ body {
 }
 
 .app-card-container{
-  color: black;
+  color: white;
   background-color: blue;
 }
 
@@ -202,4 +202,35 @@ body {
 
 .text-sizing{
  font-size: 15px;
+}
+
+.card-width {
+  width: 600px;
+}
+
+.card-block {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.toggler-button{
+  font-size:20px; 
+  background-color: black;
+}
+
+.button-icon{; 
+  border: 5px solid gray;
+  background-color: black;
+  width: 70px;
+ 
+}
+
+mark {
+  font-weight: bold;
+  color: black;
+  background-color: #034f84;
+}
+
+.left-align div div{
+  text-align: left;
 }
