Integrated custom fonts

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -40,6 +40,20 @@ footer p {
   margin-bottom: .25rem;
 }
 
+html,
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Philosopher', sans-serif;
+}
+
 /*
  *Custom
  */
