--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@ a:hover {
 html,
 body {
   height: 100%;
+  font-family: 'Lato', sans-serif;
 }
 
 body {
@@ -38,6 +39,15 @@ body {
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); box-sizing: border-box; width: 100%; height: 200%; */
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Slabo 27px', serif;
 }
 
 .cover-container {
