--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -18,10 +18,6 @@
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-}
-
 .display-4 {
   font-size: 2.5rem;
 }
@@ -129,6 +125,19 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0;
 }
 
+html,
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Philosopher', sans-serif;
+}
 
 /*
  *Custom styles
