--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
         <%= csrf_meta_tags %>
         <%= csp_meta_tag %>
 
+        <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Slabo+27px" rel="stylesheet">
+
         <meta name="keywords" content="<%= @seo_keywords %>" />
-        
+
         <%= favicon_link_tag 'favicons/favicon.ico' %>
 
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
