--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -7,6 +7,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+   <link href="https://fonts.googleapis.com/css?family=Lato|Philosopher|Roboto|Slabo+27px" rel="stylesheet">
+
     <meta name="keywords" content="<%= @seo_keywords %>" />
     <%= favicon_link_tag 'favicons/favicon.ico' %>
 
