final changes, multiple images added, modified seeds, fixed bugs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <%= video_helper('binary.mp4', "backgroundb.png") %>
-  <main role="main" class="inner cover">
+  <main class="home-card">
     <h1 class="cover-heading">Welcome!</h1>
     <p class="lead"> 
     	<h3>"A clever person solves a problem.<h2>
