--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Philosopher', sans-serif;
 }
 
 .cover-container {
@@ -218,6 +218,18 @@ h6, .h6 {
   width: 600px;
 }
 
+.home-card {
+  background-color:rgba(0, 0, 0, 0.75);
+  margin-left: 175px;
+  width: 500px;
+}
+
+.contact-card {
+  background-color:rgba(0, 0, 0, 0.5);
+  width: 300px;
+  height: 250px;
+}
+
 .card-block {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -243,4 +255,14 @@ mark {
 
 .left-align div div{
   text-align: left;
+}
+
+.ghg{
+    background-color:rgba(0, 0, 0, 0.5);
+    height: 30px;
+    padding-top: 10px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    
 }
