--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
         <%= csrf_meta_tags %>
         <%= csp_meta_tag %>
 
-        <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Slabo+27px" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cookie|Lato|Philosopher|Roboto" rel="stylesheet">
 
         <meta name="keywords" content="<%= @seo_keywords %>" />
 
@@ -30,6 +30,8 @@
             <%= render "shared/application_footer"%>
 
             <%= alerts %>
+            <%= alert_position %>
+
 
         </div>
     </body>
