--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-   <link href="https://fonts.googleapis.com/css?family=Lato|Philosopher|Roboto|Slabo+27px" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Cookie|Lato|Philosopher|Roboto" rel="stylesheet">
 
     <meta name="keywords" content="<%= @seo_keywords %>" />
     <%= favicon_link_tag 'favicons/favicon.ico' %>
@@ -27,6 +27,7 @@
         <%= render "shared/blog_footer"%>
 
         <%= alerts %>
+        <%= alert_position %>
         
     </main> 
   </body>
