--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,29 +1,23 @@
 <div class = "container portfolio-container">
 	<div class = "row">
-		<div class= "col-md-7">
+		<div class= "col-md-8">
 			<%= image_tag portfolio_img(@portfolio_item.main_image.url, "main"), width: '100%'%>
 		</div>
-		<div class= "col-md-5">
+		<div class= "col-md-4">
 			<h1> <%= @portfolio_item.title %> </h1>
-
 			<hr>
-
 			<em> <%= @portfolio_item.subtitle %> </em>
-
 			<p> <%= @portfolio_item.body %> </p>
-
 			<hr>
-
 			<h3>Technologies Used:</h3>
-
 			<% @portfolio_item.technologies.each do |t| %>
-			<p> <%= t.name %> </p>
+				<p> <%= t.name %> </p>
 			<% end %>
-
 			<% if logged_in?(:site_admin) %>
-				<div >
+			    <p>
 					<%= link_to "Edit Item", edit_portfolio_path(@portfolio_item), class: "btn btn-warning" %>
-				</div>
+					<%= link_to "Delete", @portfolio_item, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %>
+			    </p>
 			<% end %>
 		</div>
 	</div>
