--- a/app/views/shared/_portfolio_header.html.erb
+++ b/app/views/shared/_portfolio_header.html.erb
@@ -1,27 +1,10 @@
  <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <p class="lead text-muted">The following is a collection of projects I have worked on in a all the languages I have become familiar with. They each provide an application of a varying feature. </p>
     <p>
       <%= link_to "Find Out More About Me", about_me_path, class: "btn btn-primary" %>
       <%= link_to "My Blogs", blogs_path, class: "btn btn-secondary" %>
     </p>
-    <br>
-    <div class="skills">
-		<% Skill.all.each do |skill| %>
-			<div class="skill">
-			    <h4><%= skill.title %></h4>
-			    <div class="progress">
-				    <div
-				      class="progress-bar progress-bar-striped bg-warning"
-				      role="progressbar"
-				      aria-valuenow="<%= skill.percent_utilized %>"
-				      aria-valuemax="100"
-				      style="width: <%= skill.percent_utilized %>%"
-				    ></div>
-			    </div>
-			</div>
-		<% end %>
-	</div>
   </div>
 </section>
